2005-03-23  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__glpk__.cc (F__glpk__): Accept lpsolver and
	save_pb in param arg instead of as separate args.
	Arg list now matches new interface for glpk.m.

	* toplev.cc (do_octave_atexit): Call reset_error_handler before
	each call to feval.

2005-03-22  John W. Eaton  <jwe@octave.org>

	* Makefile.in: Add special rule for __glpk__.oct.

	* toplev.cc (octave_config_info): Add GLPK_LIBS to the list.
	* oct-conf.h.in (OCTAVE_CONF_GLPK_LIBS): Substitute here.

	* DLD-FUNCTIONS/__glpk__.cc (F__glpk__, glpk):
	Adapt to Octave coding style.
	(glpk): Move decls closer to first use.
	(F__glpk__): Eliminate unnecessary loop seting inf values.
	Ensure that isMIP is initialized.
	Declare sense, nz, and isMIP volatile to avoid GCC warnings that
	these variables might be might be clobbered by `longjmp' or `vfork'

	* DLD-FUNCTIONS/__glpk__.cc: New file.

	* Makefile.in (DLD_XSRC): Add it to the list.

2005-03-21  John W. Eaton  <jwe@octave.org>

	* octave.cc (maximum_braindamage):
	Don't set warn_matlab_incompatible to true.

2005-03-17  John W. Eaton  <jwe@octave.org>

	* lex.l (class bracket_brace_paren_nesting_level): Use static
	const int members instead of anonymous enum.

2005-03-16  John W. Eaton  <jwe@octave.org>

	* ov-struct.cc (octave_struct::save_ascii): Don't convert Cell
	object to cs-list.
	(octave_struct::save_binary): Likewise
	(octave_struct::save_hdf5): Likewise.

	* DLD-FUNCTIONS/gplot.l (Fset, Fshow): Delete.
	(F__gnuplot_plot__): Rename from Fgplot.
	(F__gnuplot_splot__): Rename from Fgsplot.
	(F__gnuplot_raw__): Rename from Fgraw.
	(F__gnuplot_set__): Rename from Fgset.
	(F__gnuplot_show__): Rename from Fgshow.
	(F__gnuplot_replot__): Rename from Freplot.
	(WARN_DEPRECATED, DEPRECATED_BODY): New macros.
	(Fgplot, Fgsplot, Fgraw, Fgset, Fgshow): New functions.

2005-03-15  John W. Eaton  <jwe@octave.org>

	* lex.l (<COMMAND_START>{NL}): Reset lexer_flags.doing_rawcommand
	state here.
